add github link and doc markup

--- a/site/en/sobre.html
+++ b/site/en/sobre.html
@@ -82,10 +82,11 @@
           <div class="col-sm-4 col-xs-10 texto col-main">
             <div id="main-content" style="opacity:0;">
               <span itemprop="articleBody"><p class="text-left text-lowercase ">we are language beings. immersed in a maze of signs and meanings. through the words we translate the universe around us. names, titles, initials, nicknames. the words mediate our connection with reality. they are the first interface of communication. but what is the essence of a word? what is its deepest meaning? what is the color of a word?</p>
-              <p class="text-left text-lowercase ">cromatográfico is an experimental project by <a href="http://caosdesign.com.br" target="_blank" id="caos-amarelo">caos! vídeo & design</a>. a word-fed-machine that creates dynamic color palettes that change every time with the continuous flow of information available on the network.</p></span>
+              <p class="text-left text-lowercase ">cromatográfico is an experimental project by <a href="http://caosdesign.com.br" target="_blank" class="caos-amarelo">caos! vídeo & design</a>. a word-fed-machine that creates dynamic color palettes that change every time with the continuous flow of information available on the network.</p></span>
               <div id="infografico-container">
                 <img itemprop="image" src="../images/infografico_cromatografico_en.svg" width="428" height="78" alt="Infográfico Cromatográfico"/>
               </div>
+              <p class="text-center text-lowercase git-container"><a href="https://github.com/caosdesign/cromatografico" target="_blank" class="caos-amarelo">github repository</a></p>
             </div>
           </div>
           <div class="col-sm-3 col-xs-10 text-right visible-sm visible-md visible-lg"><a href="index.html" class="texto"><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">caos</span></span>!</a></div>
