--- a/site/sobre.html
+++ b/site/sobre.html
@@ -82,10 +82,11 @@
           <div class="col-sm-4 col-xs-10 texto col-main">
             <div id="main-content" style="opacity:0;">
               <span itemprop="articleBody"><p class="text-left text-lowercase ">somos seres de linguagem. imersos em um emaranhado de signos e significados. através das palavras traduzimos o universo a nossa volta. nomes, títulos, siglas, apelidos. as palavras intermediam a nossa lida com o real. são a interface primeira da comunicação. mas qual é a essência de uma palavra? qual é a sua acepção mais profunda? qual é a cor de uma palavra?</p>
-              <p class="text-left text-lowercase ">o cromatográfico é um projeto experimental da <a href="http://caosdesign.com.br" target="_blank" id="caos-amarelo">caos! vídeo & design</a>. uma máquina que se alimenta de palavras para criar paletas de cores dinâmicas que se alteram a cada momento com o fluxo contínuo das informações disponibilizadas na rede.</p></span>
+              <p class="text-left text-lowercase ">o cromatográfico é um projeto experimental da <a href="http://caosdesign.com.br" target="_blank" class="caos-amarelo">caos! vídeo & design</a>. uma máquina que se alimenta de palavras para criar paletas de cores dinâmicas que se alteram a cada momento com o fluxo contínuo das informações disponibilizadas na rede.</p></span>
               <div id="infografico-container">
                 <img itemprop="image" src="./images/infografico_cromatografico.svg" width="428" height="78" alt="Infográfico Cromatográfico"/>
               </div>
+              <p class="text-center text-lowercase git-container"><a href="https://github.com/caosdesign/cromatografico" target="_blank" class="caos-amarelo">repositório no github</a></p>
             </div>
           </div>
           <div class="col-sm-3 col-xs-10 text-right visible-sm visible-md visible-lg"><a href="index.html" class="texto"><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">caos</span></span>!</a></div>
