--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,9 @@
     <meta property="og:type" content="article" />
     <meta property="article:publisher" content="caosdesign" />
     <meta property="fb:profile_id" content="114254061954373" />
+    <meta property="fb:app_id" content="1613857125531579" /> 
+    <meta property="og:type" content="cromatografico-test:color_palette" />
+    
 
     <link rel="canonical" href="http://www.engenhoca.caosdesign.com.br/cromatografico/" />
     <link hreflang="pt-br" rel="alternate" href="http://www.engenhoca.caosdesign.com.br/cromatografico/">
@@ -83,7 +86,7 @@
           <div class="col-xs-6">
             <form id="search-form" class="navbar-form navbar-left toogle" role="search">
               <input type="text" class="form-control texto" placeholder="qual a palavra?">
-              <p id="complemento-input" class=""></p>
+              <div id="complemento-input-container"><span id="complemento-input" class=""></span><div id="share-palette-container"><span> | </span><span id="share-button">share</span></div></div>
             </form>
           </div>
           <div class="col-xs-2 text-right"><a href="http://caosdesign.com.br" target="_blank" class="texto">
@@ -98,12 +101,20 @@
       <div class="container-fluid">
         <div id="cores-container" class="row text-center"></div>
         <div id="footer-container" class="row text-center">
-          <p class="text-uppercase texto"></p>
+          <p id="hex-container" class="text-uppercase texto"></p>
           <p id="lang-selector">
             <a class="text-lowercase texto" href="./">palavras</a><span class="texto">  |  </span><a class="text-lowercase texto" href="./en/">words</a>
           </p>
         </div>
         <div id="results"></div>
+
+        <div id="share-pallete-container" style=" position: absolute; bottom: 0;">
+          <canvas id="share-canvas" width="1200" height="630" style="display: none"></canvas>
+          <div id="fb-root"></div>
+          <form method="post" accept-charset="utf-8" name="form1">
+              <input name="hidden_data" id='hidden_data' type="hidden"/>
+          </form>
+        </div>
       </div>
     </section>
 
