html to php + query lang en

--- a/site/en/index.html
+++ b/site/en/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Caos :: Vídeo e Design">
 
     <meta name="description" content="cromatográfico is an experimental project of caos! vídeo & design. a machine that feeds on words to create dynamic color palettes that change every time with the continuous flow of information available on the network.">
-    <meta name="keywords" content="cor, palavra, engenhoca, caos, experimento" />
+    <meta name="keywords" content="color, word, engenhoca, caos, experiment" />
     <meta name="author" content="caos! video e design">
 
     <meta property="og:title" content="| CROMATOGRÁFICO |"/>
